[CSS Regions] Hit-testing is not working properly inside scrollable regions https://bugs.webkit.org/show_bug.cgi?id=130015

Reviewed by Antti Koivisto.

Source/WebCore:

When hit-testing inside the flow thread's layer, the scrolled offset
of the current region must be taken into consideration.

Test: fast/regions/scrollable-regions-hit-testing-inside.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects):

LayoutTests:

Added test for hit-testing inside scrollable regions.

* fast/regions/scrollable-regions-hit-testing-inside-expected.html: Added.
* fast/regions/scrollable-regions-hit-testing-inside.html: Added.


Canonical link: https://commits.webkit.org/148011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165388 268f45cc-cd09-0410-ab3c-d52691b4dbfc